Fixed anchor links for Recipes page so content is not hidden behind nav bar. Will need to do this for gallery as well.

--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,13 @@ html {
   min-height: 100%;
 }
 
+.anchor {
+  display: block;
+  height: 50px;
+  margin-top: -50px;
+  visibility: hidden;
+}
+
 #footer {
   position: absolute;
   bottom: 0;
@@ -71,6 +78,7 @@ html {
 #navbar-container {
   margin-top: 2em;
   text-align: center;
+  z-index: 10;
 }
 
 #navbar-container .list-group-item {
